--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=11228
 server.servlet.context-path=/wh
 
 #database
-spring.datasource.url=jdbc:mysql://localhost:3306/wh_wx?characterEncoding=utf-8&allowMultiQueries=true  
+spring.datasource.url=jdbc:mysql://localhost:3306/wh_wx?characterEncoding=utf-8&allowMultiQueries=true&serverTimezone=GMT  
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
